adjusted routing and altered menu and faq sections

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
       <div class="banner-wrap">
         <div class="notice-text">
           We&#x27;re open and available for pickup &amp; delivery.
-          <a href="order.html" class="white-link">Order Now</a>
+          <a href="menu" class="white-link">Order Now</a>
         </div>
       </div>
     </div>
@@ -62,7 +62,7 @@
     >
       <div class="navigation-container">
         <div class="navigation-left">
-          <a href="index.html" class="brand w-nav-brand"
+          <a href="welcome" class="brand w-nav-brand"
             ><img src="images/Logo.png" width="80" alt=""
           /></a>
         </div>
@@ -71,17 +71,17 @@
             <div class="icon w-icon-nav-menu"></div>
           </div>
           <nav role="navigation" class="nav-menu w-nav-menu">
-            <a href="index.html" class="nav-link w-nav-link">Home</a>
-            <a href="order.html" class="nav-link w-nav-link">Menu</a>
+            <a href="welcome" class="nav-link w-nav-link">Home</a>
+            <a href="menu" class="nav-link w-nav-link">Menu</a>
             <a
-              href="company.html"
+              href="about"
               aria-current="page"
               class="nav-link w-nav-link w--current"
               >About</a
             >
-            <a href="faq.html" class="nav-link w-nav-link">FAQ</a>
+            <a href="faq" class="nav-link w-nav-link">FAQ</a>
             <a
-              href="mailto:hello@website.com?subject=Hi"
+              href="mailto:cjsnashvillehot@gmail.com?subject=Order Inquiry"
               class="nav-link w-nav-link"
               >Contact</a
             >
@@ -143,7 +143,7 @@
             </p>
             <p>
               We've served our perfected recipes to many family, friends,
-              neighbors, and co-workers at our house for "Nashville" hot chicken
+              neighbors, and co-workers in our home for "Nashville" hot chicken
               parties. Now, we at CJ's Nashville Hot Chicken are happpy to share
               the joy of Nashville with you.
             </p>
@@ -168,14 +168,14 @@
             class="footer-column"
           >
             <a
-              href="index.html"
+              href="welcome"
               aria-current="page"
               class="footer-link w--current"
               >Home</a
             >
-            <a href="order.html" class="footer-link">Order</a>
-            <a href="faq.html" class="footer-link">FAQ</a>
-            <a href="mailto:hello@website.com?subject=Hi" class="footer-link"
+            <a href="menu" class="footer-link">Order</a>
+            <a href="faq" class="footer-link">FAQ</a>
+            <a href="mailto:cjsnashvillehot@gmail.com?subject=Order Inquiry" class="footer-link"
               >Contact</a
             >
           </div>
