--- a/faq.html
+++ b/faq.html
@@ -43,9 +43,9 @@
         <div class="notice-text">
           If you have any other general questions, please email
           <a
-            href="mailto:cbj@cjsnashvillehot.com?subject=Inquiry"
+            href="mailto:cjsnashvillehot@gmail.com?subject=Order Inquiry"
             class="white-link"
-            >cbj@cjsnashvillehot.com</a
+            >cjsnashvillehot@gmail.com</a
           >
         </div>
       </div>
@@ -63,7 +63,7 @@
     >
       <div class="navigation-container">
         <div class="navigation-left">
-          <a href="index.html" class="brand w-nav-brand"
+          <a href="welcome" class="brand w-nav-brand"
             ><img src="images/Logo.png" width="80" alt=""
           /></a>
         </div>
@@ -72,17 +72,17 @@
             <div class="icon w-icon-nav-menu"></div>
           </div>
           <nav role="navigation" class="nav-menu w-nav-menu">
-            <a href="index.html" class="nav-link w-nav-link">Home</a>
-            <a href="order.html" class="nav-link w-nav-link">Menu</a>
-            <a href="company.html" class="nav-link w-nav-link">About</a>
+            <a href="welcome" class="nav-link w-nav-link">Home</a>
+            <a href="menu" class="nav-link w-nav-link">Menu</a>
+            <a href="about" class="nav-link w-nav-link">About</a>
             <a
-              href="faq.html"
+              href="faq"
               aria-current="page"
               class="nav-link w-nav-link w--current"
               >FAQ</a
             >
             <a
-              href="mailto:hello@website.com?subject=Hi"
+              href="mailto:cjsnashvillehot@gmail.com?subject=Order Inquiry"
               class="nav-link w-nav-link"
               >Contact</a
             >
@@ -173,10 +173,9 @@
                     <p class="faq-paragraph">
                       We require at least
                       <span class="brand-span-sec">48 hours</span> advance
-                      notice for orders of 30 people or less, and we suggest
-                      additional lead time for orders larger than that. We
-                      highly recommend booking sooner than later as we cannot
-                      always guarantee availability.
+                      notice for orders, and we suggest additional lead time for
+                      orders large parties. We highly recommend booking sooner
+                      than later as we cannot always guarantee availability.
                     </p>
                   </div>
                 </div>
@@ -317,12 +316,14 @@
                   </a>
                   <div class="faq-content">
                     <p class="faq-paragraph">
-                      Our primary location is at the Frontier Kitchen for pickup and delivery. The address is 25387 Pleasant Valley Rd Unit 110, Chantilly, VA 20152.
-                      20147
+                      Our primary location is at the Frontier Kitchen for pickup
+                      and delivery. The address is 25387 Pleasant Valley Rd Unit
+                      110, Chantilly, VA 20152. 20147
                     </p>
                     <p class="faq-paragraph">
-                      On <span class="brand-span">Saturday’s</span> we are located at the EatLoco Farmers Market at One Loudoun. The address is 44578 Atwater Dr, Ashburn, VA
-                      20147.
+                      On <span class="brand-span">Saturday’s</span> we are
+                      located at the EatLoco Farmers Market at One Loudoun. The
+                      address is 44578 Atwater Dr, Ashburn, VA 20147.
                     </p>
                   </div>
                 </div>
@@ -335,20 +336,25 @@
                   </a>
                   <div class="faq-content">
                     <p class="faq-paragraph">
-                      We are open Sun - Fri from 9 A.M. to 5 P.M. at the Frontier Kitchen, and 9 A.M. to 1 P.M. on Saturday's at the Farmer's Market.
+                      Catering orders may be placed Monday - Friday from 10 A.M.
+                      - 6 P.M. We are located at the
+                      <a class="brand-span" href="https://www.eatloco.org/"
+                        >EatLoco Farmer's Market</a
+                      >
+                      in Ashburn, Va on Saturday’s.
                     </p>
                   </div>
                 </div>
                 <div class="faq-question-wrap">
                   <a href="#" class="faq-question-bar w-inline-block">
-                    <div class="question-title">
-                      How do you accept orders?
-                    </div>
+                    <div class="question-title">How do you accept orders?</div>
                     <img src="images/Plus.svg" alt="" class="plus" />
                   </a>
                   <div class="faq-content">
                     <p class="faq-paragraph">
-                      To place an order with us you can call ahead at (202) 596-7335, or email cjsnashvillehot@gmail.com
+                      To place an order with us you can call ahead at (202)
+                      596-7335, or email cjsnashvillehot@gmail.com. If we don't
+                      return your email within 24 hours, please call.
                     </p>
                   </div>
                 </div>
@@ -372,14 +378,14 @@
             class="footer-column"
           >
             <a
-              href="index.html"
+              href="welcome"
               aria-current="page"
               class="footer-link w--current"
               >Home</a
             >
-            <a href="order.html" class="footer-link">Order</a>
-            <a href="faq.html" class="footer-link">FAQ</a>
-            <a href="mailto:hello@website.com?subject=Hi" class="footer-link"
+            <a href="order" class="footer-link">Order</a>
+            <a href="faq" class="footer-link">FAQ</a>
+            <a href="mailto:cjsnashvillehot@gmail.com?subject=Order Inquiry" class="footer-link"
               >Contact</a
             >
           </div>
