--- a/menu.html
+++ b/menu.html
@@ -45,7 +45,7 @@
       <div class="banner-wrap">
         <div class="notice-text">
           We&#x27;re open and available for pickup &amp; delivery.
-          <a href="order.html" aria-current="page" class="white-link w--current"
+          <a href="menu" aria-current="page" class="white-link w--current"
             >Order Now</a
           >
         </div>
@@ -64,7 +64,7 @@
     >
       <div class="navigation-container">
         <div class="navigation-left">
-          <a href="index.html" class="brand w-nav-brand"
+          <a href="welcome" class="brand w-nav-brand"
             ><img src="images/Logo.png" width="80" alt=""
           /></a>
         </div>
@@ -73,17 +73,17 @@
             <div class="icon w-icon-nav-menu"></div>
           </div>
           <nav role="navigation" class="nav-menu w-nav-menu">
-            <a href="index.html" class="nav-link w-nav-link">Home</a>
+            <a href="welcome" class="nav-link w-nav-link">Home</a>
             <a
-              href="order.html"
+              href="menu"
               aria-current="page"
               class="nav-link w-nav-link w--current"
               >Menu</a
             >
-            <a href="company.html" class="nav-link w-nav-link">About</a>
-            <a href="faq.html" class="nav-link w-nav-link">FAQ</a>
+            <a href="about" class="nav-link w-nav-link">About</a>
+            <a href="faq" class="nav-link w-nav-link">FAQ</a>
             <a
-              href="mailto:hello@website.com?subject=Hi"
+              href="mailto:cjsnashvillehot@gmail.com?subject=Order Inquiry"
               class="nav-link w-nav-link"
               >Contact</a
             >
@@ -168,66 +168,94 @@
             </a>
           </div>
           <div class="w-tab-content">
-            <div data-w-tab="Catering" class="tab-pane-wrap w-tab-pane w--tab-active">
+            <div
+              data-w-tab="Catering"
+              class="tab-pane-wrap w-tab-pane w--tab-active"
+            >
               <div class="menu-container">
                 <div class="menu-wrapper">
                   <p class="menu-items">Plan A</p>
                   <span class="menu-item-price brand-span">$375.00</span>
                 </div>
-                <p class="menu-item-description">40 chicken tenders, 3 sides and choice of 20 goo-goo clusters or 20 moonpies (or 10 of each).</p>
+                <p class="menu-item-description">
+                  40 chicken tenders, 3 sides and choice of 20 goo-goo clusters
+                  or 20 moonpies (or 10 of each).
+                </p>
                 <div class="menu-wrapper">
                   <p class="menu-items">Plan B</p>
                   <span class="menu-item-price brand-span">$750.00</span>
                 </div>
-                <p class="menu-item-description">80 chicken tenders, 3 sides and choice of 40 goo-goo clusters or 40 moonpies (or 20 of each).</p>
+                <p class="menu-item-description">
+                  80 chicken tenders, 3 sides and choice of 40 goo-goo clusters
+                  or 40 moonpies (or 20 of each).
+                </p>
                 <div class="menu-wrapper">
                   <p class="menu-items">Plan C</p>
                   <span class="menu-item-price brand-span">$1,125.00</span>
                 </div>
-                <p class="menu-item-description">120 chicken tenders, 3 sides and choice of 60 goo-goo clusters or 60 moonpies (or 30 of each).</p>
+                <p class="menu-item-description">
+                  120 chicken tenders, 3 sides and choice of 60 goo-goo clusters
+                  or 60 moonpies (or 30 of each).
+                </p>
+                <div class="note-wrapper">
+                  <span class="note-span">Please Note:</span>
+                  <p class="note-items">
+                    We are happy to develop a custom plan to meet your needs.
+                  </p>
+                </div>
               </div>
             </div>
-            <div
-              data-w-tab="Chicken"
-              class="tab-pane-wrap w-tab-pane"
-            >
-            <div class="menu-container">
-              <div class="menu-wrapper">
-                <p class="menu-items">Chicken Tenders</p>
-                <span class="menu-item-price brand-span">$12.00</span>
+            <div data-w-tab="Chicken" class="tab-pane-wrap w-tab-pane">
+              <div class="menu-container">
+                <div class="menu-wrapper">
+                  <p class="menu-items">Chicken Tenders</p>
+                  <!-- <span class="menu-item-price brand-span">$12.00</span> -->
+                </div>
+                <p class="menu-item-description">
+                  Two chicken tenders served on white bread with bread and
+                  butter pickles.
+                </p>
               </div>
-              <p class="menu-item-description">Two chicken tenders served on white bread with bread and butter pickles.</p>
-            </div>
             </div>
             <div data-w-tab="Sides" class="w-tab-pane">
               <div class="menu-container">
                 <div class="menu-wrapper">
                   <p class="menu-items">Collard Greens</p>
-                  <span class="menu-item-price brand-span">$5.00</span>
+                  <!-- <span class="menu-item-price brand-span">$5.00</span> -->
                 </div>
                 <p class="menu-item-description"></p>
                 <div class="menu-wrapper">
                   <p class="menu-items">Mac and Cheese</p>
-                  <span class="menu-item-price brand-span">$5.00</span>
+                  <!-- <span class="menu-item-price brand-span">$5.00</span> -->
                 </div>
                 <p class="menu-item-description"></p>
                 <div class="menu-wrapper">
                   <p class="menu-items">Parmesan Zucchini Crisps</p>
-                  <span class="menu-item-price brand-span">$5.00</span>
+                  <!-- <span class="menu-item-price brand-span">$5.00</span> -->
                 </div>
                 <p class="menu-item-description"></p>
+                <div class="menu-wrapper">
+                  <p class="menu-items">Fried Okra</p>
+                  <!-- <span class="menu-item-price brand-span">$5.00</span> -->
+                </div>
+                <div class="menu-wrapper">
+                  <p class="menu-items">Cobbed Corn</p>
+                  <!-- <span class="menu-item-price brand-span">$5.00</span> -->
+                </div>
               </div>
             </div>
             <div data-w-tab="Sweets" class="w-tab-pane">
               <div class="menu-container">
                 <div class="menu-wrapper">
-                  <p class="menu-items">Moon Pies (banana, chocolate, vanilla)</p>
-                  <span class="menu-item-price brand-span">$5.00</span>
+                  <p class="menu-items">
+                    Moon Pies (banana, chocolate, vanilla)
+                  </p>
+                  <!-- <span class="menu-item-price brand-span">$5.00</span> -->
                 </div>
                 <p class="menu-item-description"></p>
                 <div class="menu-wrapper">
                   <p class="menu-items">Goo-Goo Clusters</p>
-                  <span class="menu-item-price brand-span">$5.00</span>
+                  <!-- <span class="menu-item-price brand-span">$5.00</span> -->
                 </div>
                 <p class="menu-item-description"></p>
               </div>
@@ -250,23 +278,21 @@
             class="footer-column"
           >
             <a
-              href="index.html"
+              href="welcome"
               aria-current="page"
               class="footer-link w--current"
               >Home</a
             >
-            <a href="order.html" class="footer-link">Order</a>
-            <a href="faq.html" class="footer-link">FAQ</a>
-            <a href="mailto:hello@website.com?subject=Hi" class="footer-link"
+            <a href="menu" class="footer-link">Order</a>
+            <a href="faq" class="footer-link">FAQ</a>
+            <a href="mailto:cjsnashvillehot@gmail.com?subject=Inquiry" class="footer-link"
               >Contact</a
             >
           </div>
         </div>
         <div class="footer-legal">
           <div class="footer-detail-left">
-            <div class="legal">
-              Copyright © 2023. All rights reserved.
-            </div>
+            <div class="legal">Copyright © 2023. All rights reserved.</div>
           </div>
           <div class="footer-detail-right">
             <div class="detail-right">
