--- a/welcome.html
+++ b/welcome.html
@@ -56,7 +56,7 @@
       <div class="banner-wrap">
         <div class="notice-text">
           We&#x27;re open and available for pickup &amp; delivery.
-          <a href="order.html" class="white-link">Order Now</a>
+          <a href="menu" class="white-link">Order Now</a>
         </div>
       </div>
     </div>
@@ -74,7 +74,7 @@
       <div class="navigation-container sticky">
         <div class="navigation-left">
           <a
-            href="index.html"
+            href="welcome"
             aria-current="page"
             class="brand w-nav-brand w--current"
             ><img src="images/Logo.png" width="80" alt=""
@@ -86,16 +86,16 @@
           </div>
           <nav role="navigation" class="nav-menu w-nav-menu">
             <a
-              href="index.html"
+              href="welcome"
               aria-current="page"
               class="nav-link w-nav-link w--current"
               >Home</a
             >
-            <a href="order.html" class="nav-link w-nav-link">Order</a>
-            <a href="company.html" class="nav-link w-nav-link">About</a>
-            <a href="faq.html" class="nav-link w-nav-link">FAQ</a>
+            <a href="menu" class="nav-link w-nav-link">Order</a>
+            <a href="about" class="nav-link w-nav-link">About</a>
+            <a href="faq" class="nav-link w-nav-link">FAQ</a>
             <a
-              href="mailto:cbj@cjsnashvillehot.com?subject=Inquiry"
+              href="mailto:cjsnashvillehot@gmail.com?subject=Order Inquiry"
               class="nav-link w-nav-link"
               >Contact</a
             >
@@ -152,7 +152,7 @@
             "
             class="button-wrapper"
           >
-            <a href="order.html" class="button w-button">View Menu</a>
+            <a href="menu" class="button w-button">View Menu</a>
           </div>
         </div>
       </div>
@@ -171,7 +171,7 @@
               Now, we at CJ's Nashville Hot Chicken are happpy to share the joy
               of Nashville with you.
             </p>
-            <a href="company.html" class="button button-space w-button"
+            <a href="about" class="button button-space w-button"
               >Learn more</a
             >
           </div>
@@ -240,7 +240,7 @@
         <div class="title-wrap-centre">
           <h2>Browse our menu</h2>
           <p>
-            Use our menu to place an order online through our contact page, or
+            Use our menu to place an order through our contact page, or
             give us a call to place your order.
           </p>
         </div>
@@ -279,7 +279,7 @@
               <div class="menu-container">
                 <div class="menu-wrapper">
                   <p class="menu-items">Chicken Tenders</p>
-                  <span class="menu-item-price brand-span">$12.00</span>
+                  <!-- <span class="menu-item-price brand-span">$12.00</span> -->
                 </div>
                 <p class="menu-item-description">
                   Two chicken tenders served on white bread with bread and
@@ -291,19 +291,27 @@
               <div class="menu-container">
                 <div class="menu-wrapper">
                   <p class="menu-items">Collard Greens</p>
-                  <span class="menu-item-price brand-span">$5.00</span>
+                  <!-- <span class="menu-item-price brand-span">$5.00</span> -->
                 </div>
                 <p class="menu-item-description"></p>
                 <div class="menu-wrapper">
                   <p class="menu-items">Mac and Cheese</p>
-                  <span class="menu-item-price brand-span">$5.00</span>
+                  <!-- <span class="menu-item-price brand-span">$5.00</span> -->
                 </div>
                 <p class="menu-item-description"></p>
                 <div class="menu-wrapper">
                   <p class="menu-items">Parmesan Zucchini Crisps</p>
-                  <span class="menu-item-price brand-span">$5.00</span>
+                  <!-- <span class="menu-item-price brand-span">$5.00</span> -->
                 </div>
                 <p class="menu-item-description"></p>
+                <div class="menu-wrapper">
+                  <p class="menu-items">Fried Okra</p>
+                  <!-- <span class="menu-item-price brand-span">$5.00</span> -->
+                </div>
+                <div class="menu-wrapper">
+                  <p class="menu-items">Cobbed Corn</p>
+                  <!-- <span class="menu-item-price brand-span">$5.00</span> -->
+                </div>
               </div>
             </div>
             <div data-w-tab="Sweets" class="w-tab-pane">
@@ -312,12 +320,12 @@
                   <p class="menu-items">
                     Moon Pies (banana, chocolate, vanilla)
                   </p>
-                  <span class="menu-item-price brand-span">$5.00</span>
+                  <!-- <span class="menu-item-price brand-span">$5.00</span> -->
                 </div>
                 <p class="menu-item-description"></p>
                 <div class="menu-wrapper">
                   <p class="menu-items">Goo-Goo Clusters</p>
-                  <span class="menu-item-price brand-span">$5.00</span>
+                  <!-- <span class="menu-item-price brand-span">$5.00</span> -->
                 </div>
                 <p class="menu-item-description"></p>
               </div>
@@ -338,7 +346,7 @@
           "
           class="button-wrapper"
         >
-          <a href="order.html" class="button w-button">See Full Menu</a>
+          <a href="menu" class="button w-button">See Full Menu</a>
         </div>
       </div>
     </div>
@@ -358,11 +366,13 @@
             />
           </div>
           <div class="content-block">
-            <h2>Order online or over the phone.</h2>
+            <h2>Place your order over the phone or through our contact page.</h2>
             <p>
-              Allow us to be your one-stop shop for the best Nashville Hot chicken in town. Have questions? Head on over to our FAQ's page for assistance.
+              Allow us to be your one-stop shop for the best Nashville Hot
+              chicken in town. Have questions? Head on over to our FAQ's page
+              for assistance.
             </p>
-            <a href="/faq.html" class="button button-space w-button"
+            <a href="faq" class="button button-space w-button"
               >See our FAQ</a
             >
           </div>
@@ -375,7 +385,9 @@
           <div class="content-block bg-text">
             <h2>Support good food and local business.</h2>
             <p>
-              If you have ever ordered with us before, please, let us know what you think. We love to support the local community and have a positive impact on our customers.
+              If you have ever ordered with us before, please, let us know what
+              you think. We love to support the local community and have a
+              positive impact on our customers.
             </p>
             <a href="tel:202-596-7335" class="button button-space w-button"
               >Ph. (202) 596-7335</a
@@ -401,23 +413,21 @@
             class="footer-column"
           >
             <a
-              href="index.html"
+              href="welcome"
               aria-current="page"
               class="footer-link w--current"
               >Home</a
             >
-            <a href="order.html" class="footer-link">Order</a>
-            <a href="faq.html" class="footer-link">FAQ</a>
-            <a href="mailto:hello@website.com?subject=Hi" class="footer-link"
+            <a href="menu" class="footer-link">Order</a>
+            <a href="faq" class="footer-link">FAQ</a>
+            <a href="mailto:cjsnashvillehot@gmail.com?subject=Order Inquiry" class="footer-link"
               >Contact</a
             >
           </div>
         </div>
         <div class="footer-legal">
           <div class="footer-detail-left">
-            <div class="legal">
-              Copyright © 2023. All rights reserved.
-            </div>
+            <div class="legal">Copyright © 2023. All rights reserved.</div>
           </div>
           <div class="footer-detail-right">
             <div class="detail-right">
