added vercel configuration

--- a/welcome.html
+++ b/welcome.html
@@ -56,7 +56,7 @@
       <div class="banner-wrap">
         <div class="notice-text">
           We&#x27;re open and available for pickup &amp; delivery.
-          <a href="menu" class="white-link">Order Now</a>
+          <a href="menu.html" class="white-link">Order Now</a>
         </div>
       </div>
     </div>
@@ -74,7 +74,7 @@
       <div class="navigation-container sticky">
         <div class="navigation-left">
           <a
-            href="welcome"
+            href="welcome.html"
             aria-current="page"
             class="brand w-nav-brand w--current"
             ><img src="images/Logo.png" width="80" alt=""
@@ -86,14 +86,14 @@
           </div>
           <nav role="navigation" class="nav-menu w-nav-menu">
             <a
-              href="welcome"
+              href="welcome.html"
               aria-current="page"
               class="nav-link w-nav-link w--current"
               >Home</a
             >
-            <a href="menu" class="nav-link w-nav-link">Order</a>
-            <a href="about" class="nav-link w-nav-link">About</a>
-            <a href="faq" class="nav-link w-nav-link">FAQ</a>
+            <a href="menu.html" class="nav-link w-nav-link">Order</a>
+            <a href="about.html" class="nav-link w-nav-link">About</a>
+            <a href="faq.html" class="nav-link w-nav-link">FAQ</a>
             <a
               href="mailto:cjsnashvillehot@gmail.com?subject=Order Inquiry"
               class="nav-link w-nav-link"
@@ -152,7 +152,7 @@
             "
             class="button-wrapper"
           >
-            <a href="menu" class="button w-button">View Menu</a>
+            <a href="menu.html" class="button w-button">View Menu</a>
           </div>
         </div>
       </div>
@@ -171,7 +171,7 @@
               Now, we at CJ's Nashville Hot Chicken are happpy to share the joy
               of Nashville with you.
             </p>
-            <a href="about" class="button button-space w-button"
+            <a href="about.html" class="button button-space w-button"
               >Learn more</a
             >
           </div>
@@ -346,7 +346,7 @@
           "
           class="button-wrapper"
         >
-          <a href="menu" class="button w-button">See Full Menu</a>
+          <a href="menu.html" class="button w-button">See Full Menu</a>
         </div>
       </div>
     </div>
@@ -372,7 +372,7 @@
               chicken in town. Have questions? Head on over to our FAQ's page
               for assistance.
             </p>
-            <a href="faq" class="button button-space w-button"
+            <a href="faq.html" class="button button-space w-button"
               >See our FAQ</a
             >
           </div>
@@ -413,13 +413,13 @@
             class="footer-column"
           >
             <a
-              href="welcome"
+              href="welcome.html"
               aria-current="page"
               class="footer-link w--current"
               >Home</a
             >
-            <a href="menu" class="footer-link">Order</a>
-            <a href="faq" class="footer-link">FAQ</a>
+            <a href="menu.html" class="footer-link">Order</a>
+            <a href="faq.html" class="footer-link">FAQ</a>
             <a href="mailto:cjsnashvillehot@gmail.com?subject=Order Inquiry" class="footer-link"
               >Contact</a
             >
