testing new updates

--- a/404.html
+++ b/404.html
@@ -45,7 +45,7 @@
         <div>
           <p class="utility-paragraph">
             Sorry, the page you&#x27;re looking for cannot be found <br />Visit
-            our <a href="welcome" class="link">homepage</a>, to get back on
+            our <a href="index" class="link">homepage</a>, to get back on
             track.
           </p>
         </div>
