--- a/menu.html
+++ b/menu.html
@@ -64,7 +64,7 @@
     >
       <div class="navigation-container">
         <div class="navigation-left">
-          <a href="welcome" class="brand w-nav-brand"
+          <a href="index" class="brand w-nav-brand"
             ><img src="images/Logo.png" width="80" alt=""
           /></a>
         </div>
@@ -73,7 +73,7 @@
             <div class="icon w-icon-nav-menu"></div>
           </div>
           <nav role="navigation" class="nav-menu w-nav-menu">
-            <a href="welcome" class="nav-link w-nav-link">Home</a>
+            <a href="index" class="nav-link w-nav-link">Home</a>
             <a
               href="menu"
               aria-current="page"
@@ -278,7 +278,7 @@
             class="footer-column"
           >
             <a
-              href="welcome"
+              href="index"
               aria-current="page"
               class="footer-link w--current"
               >Home</a
