--- a/faq.html
+++ b/faq.html
@@ -63,7 +63,7 @@
     >
       <div class="navigation-container">
         <div class="navigation-left">
-          <a href="welcome" class="brand w-nav-brand"
+          <a href="index" class="brand w-nav-brand"
             ><img src="images/Logo.png" width="80" alt=""
           /></a>
         </div>
@@ -72,7 +72,7 @@
             <div class="icon w-icon-nav-menu"></div>
           </div>
           <nav role="navigation" class="nav-menu w-nav-menu">
-            <a href="welcome" class="nav-link w-nav-link">Home</a>
+            <a href="index" class="nav-link w-nav-link">Home</a>
             <a href="menu" class="nav-link w-nav-link">Menu</a>
             <a href="about" class="nav-link w-nav-link">About</a>
             <a
@@ -378,7 +378,7 @@
             class="footer-column"
           >
             <a
-              href="welcome"
+              href="index"
               aria-current="page"
               class="footer-link w--current"
               >Home</a
