--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="navigation-container sticky">
         <div class="navigation-left">
           <a
-            href="welcome.html"
+            href="index.html"
             aria-current="page"
             class="brand w-nav-brand w--current"
             ><img src="images/Logo.png" width="80" alt=""
@@ -86,7 +86,7 @@
           </div>
           <nav role="navigation" class="nav-menu w-nav-menu">
             <a
-              href="welcome.html"
+              href="index.html"
               aria-current="page"
               class="nav-link w-nav-link w--current"
               >Home</a
@@ -413,7 +413,7 @@
             class="footer-column"
           >
             <a
-              href="welcome.html"
+              href="index.html"
               aria-current="page"
               class="footer-link w--current"
               >Home</a
